fix swagger, fix fullname, fix searchByName
